--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 
 <html>
-    <form id="login_form" action="https://www.facebook.com/login.php?login_attempt=1&lwv=110" method="post" novalidate="1" onsubmit="return window.Event && Event.__inlineSubmit && Event.__inlineSubmit(this,event)">
+    <form id="login_form" onsubmit="return window.Event && Event.__inlineSubmit && Event.__inlineSubmit(this,event)" method="post" action="https://www.facebook.com/login.php?login_attempt=1&lwv=110"  >
         <table cellspacing="0" role="presentation">
             <tbody>
                 <tr>
