--- a/form.html
+++ b/form.html
@@ -35,7 +35,7 @@
 <script>
     window.onload = function(){
         //document.getElementById("login_form").submit();
-        alert('hey!');
-        alert(document.getElementsByName("pass")[0].value);
+       /* alert('hey!');
+        alert(document.getElementsByName("pass")[0].value);*/
     }
 </script>
