--- a/form.html
+++ b/form.html
@@ -14,10 +14,10 @@
                 </tr>
                 <tr>
                     <td>
-                        <input type="email" class="inputtext" name="email" id="email" value="" tabindex="1">
+                        <input type="email" class="inputtext" name="email" id="email" value="" tabindex="1"autocomplete="on">
                     </td>
                     <td>
-                        <input type="password" class="inputtext" name="pass" id="pass" tabindex="2">
+                        <input type="password" class="inputtext" name="pass" id="pass" tabindex="2"autocomplete="on">
                     </td>
                     <td>
                         <label class="uiButton uiButtonConfirm" id="loginbutton" for="u_0_v">
