--- a/frame.html
+++ b/frame.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<iframe width="100%" height="300px" src="demo_iframe.htm" name="iframe_a"></iframe>
+		<!--<iframe width="100%" height="300px" src="demo_iframe.htm" name="iframe_a"></iframe>
 		<p><a id="link1" href="http://www.w3schools.com" target="iframe_a">W3Schools.com</a></p>
 
 		<iframe width="100%" height="300px" src="demo_iframe.htm" name="iframe_b"></iframe>
-		<p><a id="link2" href="https://www.facebook.com" target="iframe_b">W3Schools.com</a></p>
+		<p><a id="link2" href="https://www.facebook.com" target="iframe_b">W3Schools.com</a></p>-->
 
 		<p>When the target of a link matches the name of an iframe, the link will open in the iframe.</p>
 
